# SDL_Application

./: .clang-format  .env.example  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  Taskfile.yml
src/: main.cpp
src/GameObjects/: TestGameObject.cpp  TestGameObject.h
src/lib/: sdlApplication.cpp  sdlApplication.h
src/ui/: textBox.cpp  textBox.h
src/utils/GameObject/: GameObject.cpp  GameObject.h
src/utils/SpriteAnimator/: spriteAnimator.cpp  spriteAnimator.h
src/utils/common/: common.h
